{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Controller",
            "id": "de2a3bc1-0cb9-47ba-9158-3936dbfdc962",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ea84fcca-9aac-4535-a3bb-e6d4d1d611ad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveInput",
                    "type": "Value",
                    "id": "b7b6f5c3-ac00-45a8-8063-2d9dde9aab60",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AttackInput",
                    "type": "Button",
                    "id": "80801b92-d822-45e4-b8a5-acfc1e0604ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionInput",
                    "type": "Button",
                    "id": "c618274d-311f-44de-b3e5-c8a89f6df6fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Super1Input",
                    "type": "Button",
                    "id": "5d9220d4-f2de-4bb9-b0ac-b1d96259cf00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuyInput",
                    "type": "Button",
                    "id": "f27cdc05-f67b-461b-914b-26ff84bdd7aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "628dcbd8-3b96-4d42-af5a-b228339102be",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "0ba81a29-1ac3-4ab4-97d5-edf6fa7094e5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e5b9fc40-7354-4dec-b4ef-601cbc1f4cb6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5f04720f-fe98-405e-ba62-6d8fcdfb48fe",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9accfd4b-fe3a-44fe-b29c-85ca0c6a5bd4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "da3cf3e8-d172-4edb-bedf-34d8262b5010",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInput",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5b3a1d57-c6eb-4e73-8506-f2c3d9757cc4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "992d6432-7dde-4e9f-ad83-986aa7e824d5",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f188aa6c-da85-4898-a556-5f83b0088b7b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Super1Input",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c51296b5-cd6e-4e16-b63c-702c56d5cb03",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuyInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Editor",
            "id": "3aada8c7-3c28-445e-8ef1-ddc6e267d986",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "e8c9ab28-e9a4-4eed-95aa-6c2dd17899b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowDebug",
                    "type": "Button",
                    "id": "4f620be7-7072-45af-9703-7c3018ce8d3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "438f7e72-16b5-413e-9577-5fc5293382f4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14d7a6cb-ebf4-48eb-9aec-e3f4fa2f1057",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowDebug",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}